--- a/android/examples/raytracingshadows/build.gradle
+++ b/android/examples/raytracingshadows/build.gradle
@@ -33,6 +33,11 @@ android {
             path "CMakeLists.txt"
         }
     }
+    task wrapper(type: Wrapper) {
+        gradleVersion = '7.0'
+    }
+    task prepareKotlinBuildScriptModel {
+    }
 }
 
 task copyTask {
